welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: illegal start of simple expression
if(){
   ^Program:8: error: ')' expected but '}' found.
	}
        ^